<resources>
    <string name="app_name">ColorMyViews</string>
    <string name="box_one">Box one</string>
    <string name="box_two">Box two</string>
    <string name="box_three">Box Three</string>
    <string name="box_four">Box four</string>
    <string name="box_five">Box Five</string>
    <string name="howplay">Как играть:</string>
    <string name="instraction">Нажми и играй</string>
    <string name="dark_brown">Коричневый</string>
    <string name="green">Зелёный</string>
    <string name="purple">пурпур</string>
</resources>