<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/box_one"
        style="@style/box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginBox"
        android:background="@color/black"
        android:text="@string/box_one"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/box_two"
        style="@style/box"
        android:layout_width="130sp"
        android:layout_height="130sp"
        android:layout_marginStart="16sp"
        android:layout_marginTop="16sp"
        android:background="@android:color/holo_red_dark"
        android:text="@string/box_two"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/box_one" />

    <TextView
        android:id="@+id/box_three"
        style="@style/box"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginBox"
        android:layout_marginEnd="@dimen/marginBox"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/box_three"
        app:layout_constraintBottom_toTopOf="@+id/box_four"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/box_two"
        app:layout_constraintTop_toTopOf="@+id/box_two"
        app:layout_constraintVertical_chainStyle="spread_inside"
        tools:layout_editor_absoluteX="242dp" />

    <TextView
        android:id="@+id/box_four"
        style="@style/box"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginBox"
        android:layout_marginEnd="@dimen/marginBox"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/box_four"
        app:layout_constraintBottom_toTopOf="@+id/box_five"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/box_two"
        app:layout_constraintTop_toBottomOf="@+id/box_three"
        tools:layout_editor_absoluteX="232dp" />

    <TextView
        android:id="@+id/box_five"
        style="@style/box"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginBox"
        android:layout_marginEnd="@dimen/marginBox"
        android:background="@android:color/holo_green_dark"
        android:text="@string/box_five"
        app:layout_constraintBottom_toBottomOf="@id/box_two"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/box_two"
        app:layout_constraintTop_toBottomOf="@+id/box_four"
        tools:layout_editor_absoluteX="230dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/howplay"
        android:textSize="24sp"

        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/marginBox"
        app:layout_constraintTop_toBottomOf="@id/box_two"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_marginStart="@dimen/marginBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
        android:text="@string/instraction"
        app:layout_constraintStart_toEndOf="@id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/box_five" />

</androidx.constraintlayout.widget.ConstraintLayout>